<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Get Started</string>
    <string name="contact">Choose Contact</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_image">Take Image</string>
    <string name="camera_icon">Camera icon</string>
    <string name="selected_image">Selected Image</string>
    <string name="hello">Hello, </string>
    <string name="next_question">Next question</string>
    <string name="your_score">Your score:</string>
    <string name="read_questions">Read Questions</string>
    <string name="create_question">Create Question</string>
    <string name="test_your_skills">Test your skills</string>
    <string name="enjoy_the_quiz_app_where_you_can">Enjoy the quiz app where you can</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
    <string name="answers">Answers:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="answer">Answer</string>
    <string name="add_question">Add question</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of questions</string>
    <string name="new_question">New question</string>
    <string name="quizapp">QuizApp</string>
    <string name="enjoy_the_quiz">Enjoy the quiz</string>
    <string name="player_name">Player name:</string>
    <string name="high_score">High Score:</string>
    <string name="save">Save</string>
    <string name="player">Player</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
</resources>