<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_house"
            android:title="@string/home" />

        <item
            android:id="@+id/quizGame"
            android:checked="false"
            android:icon="@drawable/ic_quiz"
            android:title="@string/quiz" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/listOfQuestions"
            android:checked="false"
            android:icon="@drawable/ic_list"
            android:title="@string/list_of_questions" />

        <item
            android:id="@+id/addQuestion"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/new_question" />
    </group>
</menu>