<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_name"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/playerName"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="NO DATA"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

<!--                <androidx.appcompat.widget.AppCompatEditText-->
<!--                    android:id="@+id/nameInput"-->
<!--                    android:layout_width="128dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/player"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:textColorHint="#7A8089" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/high_score"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/highScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:text="NO DATA"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/blue_500"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>